2007-Sep-24  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed Martin MiniMac Profile's channel groups
	* Fixed Futurelight DJScan250's channel groups
	* Added tooltips to spin boxes in VCSliderProperties dialog
	* Added empty slots for All, None and Invert in VCSliderProperties

2007-Sep-23  Heikki Junnila <hjunnila@users.sf.net>
	* Added a check in VCFrame::scram() to prevent bottom frame deletion.
	* Removed VCFrame::init()

2007-Sep-23  Heikki Junnila <hjunnila@users.sf.net>
	* Created VCSlider, a refactored version of VCDockSlider.
	* Created properties dialog for VCSlider.
	* Added type getter to Fixture.
	* Added a grouplist getter to QLCChannel.

2007-Sep-13  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed VCLabel's Y coordinate calcculation to take
	  QFontMetrics::leading() into account.
	* Changed VCLabel's default size.
	* Added case handling for adding a VCLabel to a VCFrame.

2007-Sep-13  Heikki Junnila <hjunnila@users.sf.net>
	* Created VCWidget master class for other VC widgets
	* Changed VCLabel and VCFrame to inherit VCWidget

2007-Sep-12  Heikki Junnila <hjunnila@users.sf.net>
	* Modified VCButton to incorporate new XML scheme.
	* Fixed keybind & sliderkeybind saving

2007-Sep-11  Heikki Junnila <hjunnila@users.sf.net>
	* VC widgets continued...

2007-Sep-10  Heikki Junnila <hjunnila@users.sf.net>
	* VC widgets continued...

2007-Sep-09  Heikki Junnila <hjunnila@users.sf.net>
	* Started to move from the weird shared menu system in VC
	  to individually-managed menus for each widget.
	* -> TODO: A common base class for VC widgets that contains
	  the shared stuff. BUT the base class MUST NOT inherit QObject
	  because QT doesn't like it. This seems to be quite
	  difficult actually...

2007-Sep-08  Heikki Junnila <hjunnila@users.sf.net>
	* VC widgets continued...

2007-Sep-06  Heikki Junnila <hjunnila@users.sf.net>
	* VCProperties dialog no longer uses Settings class for load/save.
	* Implemented appearance saving for VCLabel.
