@@ -58,6 +58,12 @@ public:
 	void scram();
 
 	/*********************************************************************
+	 * Caption
+	 *********************************************************************/
+public:
+	void setCaption(const QString& text);
+
+	/*********************************************************************
 	 * Properties
 	 *********************************************************************/
 public:
