@@ -8,8 +8,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>511</width>
-            <height>555</height>
+            <width>458</width>
+            <height>537</height>
         </rect>
     </property>
     <property name="caption">
@@ -25,7 +25,7 @@
             </property>
             <widget class="QWidget">
                 <property name="name">
-                    <cstring>tab</cstring>
+                    <cstring>General</cstring>
                 </property>
                 <attribute name="title">
                     <string>General</string>
@@ -133,7 +133,7 @@
             </widget>
             <widget class="QWidget">
                 <property name="name">
-                    <cstring>tab</cstring>
+                    <cstring>Bus</cstring>
                 </property>
                 <attribute name="title">
                     <string>Bus</string>
@@ -142,6 +142,69 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
+                    <widget class="QGroupBox">
+                        <property name="name">
+                            <cstring>groupBox6</cstring>
+                        </property>
+                        <property name="title">
+                            <string>Value Range</string>
+                        </property>
+                        <hbox>
+                            <property name="name">
+                                <cstring>unnamed</cstring>
+                            </property>
+                            <widget class="QLabel">
+                                <property name="name">
+                                    <cstring>m_lowLimitLabel</cstring>
+                                </property>
+                                <property name="text">
+                                    <string>Low</string>
+                                </property>
+                            </widget>
+                            <widget class="QSpinBox">
+                                <property name="name">
+                                    <cstring>m_busLowLimitSpin</cstring>
+                                </property>
+                                <property name="suffix">
+                                    <string>s</string>
+                                </property>
+                                <property name="maxValue">
+                                    <number>998</number>
+                                </property>
+                                <property name="toolTip" stdset="0">
+                                    <string>The lowest bus value that can be set with this slider</string>
+                                </property>
+                            </widget>
+                            <widget class="QLabel">
+                                <property name="name">
+                                    <cstring>m_highLimitLabel</cstring>
+                                </property>
+                                <property name="text">
+                                    <string>High</string>
+                                </property>
+                            </widget>
+                            <widget class="QSpinBox">
+                                <property name="name">
+                                    <cstring>m_busHighLimitSpin</cstring>
+                                </property>
+                                <property name="suffix">
+                                    <string>s</string>
+                                </property>
+                                <property name="maxValue">
+                                    <number>999</number>
+                                </property>
+                                <property name="minValue">
+                                    <number>1</number>
+                                </property>
+                                <property name="value">
+                                    <number>15</number>
+                                </property>
+                                <property name="toolTip" stdset="0">
+                                    <string>The lowest bus value that can be set with this slider</string>
+                                </property>
+                            </widget>
+                        </hbox>
+                    </widget>
                     <widget class="QLayoutWidget">
                         <property name="name">
                             <cstring>layout12</cstring>
@@ -179,88 +242,6 @@
                             </widget>
                         </hbox>
                     </widget>
-                    <widget class="QLayoutWidget">
-                        <property name="name">
-                            <cstring>layout13</cstring>
-                        </property>
-                        <hbox>
-                            <property name="name">
-                                <cstring>unnamed</cstring>
-                            </property>
-                            <widget class="QLabel">
-                                <property name="name">
-                                    <cstring>m_lowLimitLabel</cstring>
-                                </property>
-                                <property name="maximumSize">
-                                    <size>
-                                        <width>100</width>
-                                        <height>32767</height>
-                                    </size>
-                                </property>
-                                <property name="text">
-                                    <string>Low Limit</string>
-                                </property>
-                            </widget>
-                            <widget class="QSpinBox">
-                                <property name="name">
-                                    <cstring>m_busLowLimitSpin</cstring>
-                                </property>
-                                <property name="suffix">
-                                    <string>s</string>
-                                </property>
-                                <property name="maxValue">
-                                    <number>998</number>
-                                </property>
-                                <property name="toolTip" stdset="0">
-                                    <string>The lowest bus value that can be set with this slider</string>
-                                </property>
-                            </widget>
-                        </hbox>
-                    </widget>
-                    <widget class="QLayoutWidget">
-                        <property name="name">
-                            <cstring>layout14</cstring>
-                        </property>
-                        <hbox>
-                            <property name="name">
-                                <cstring>unnamed</cstring>
-                            </property>
-                            <widget class="QLabel">
-                                <property name="name">
-                                    <cstring>m_highLimitLabel</cstring>
-                                </property>
-                                <property name="maximumSize">
-                                    <size>
-                                        <width>100</width>
-                                        <height>32767</height>
-                                    </size>
-                                </property>
-                                <property name="text">
-                                    <string>High Limit</string>
-                                </property>
-                            </widget>
-                            <widget class="QSpinBox">
-                                <property name="name">
-                                    <cstring>m_busHighLimitSpin</cstring>
-                                </property>
-                                <property name="suffix">
-                                    <string>s</string>
-                                </property>
-                                <property name="maxValue">
-                                    <number>999</number>
-                                </property>
-                                <property name="minValue">
-                                    <number>1</number>
-                                </property>
-                                <property name="value">
-                                    <number>15</number>
-                                </property>
-                                <property name="toolTip" stdset="0">
-                                    <string>The lowest bus value that can be set with this slider</string>
-                                </property>
-                            </widget>
-                        </hbox>
-                    </widget>
                     <spacer>
                         <property name="name">
                             <cstring>spacer6</cstring>
@@ -274,7 +255,7 @@
                         <property name="sizeHint">
                             <size>
                                 <width>21</width>
-                                <height>131</height>
+                                <height>260</height>
                             </size>
                         </property>
                     </spacer>
@@ -282,7 +263,7 @@
             </widget>
             <widget class="QWidget">
                 <property name="name">
-                    <cstring>TabPage</cstring>
+                    <cstring>Level</cstring>
                 </property>
                 <attribute name="title">
                     <string>Level</string>
@@ -400,7 +381,7 @@
                                     <string>All</string>
                                 </property>
                                 <property name="toolTip" stdset="0">
-                                    <string>Select all</string>
+                                    <string>Select all channels</string>
                                 </property>
                             </widget>
                             <widget class="QPushButton">
@@ -459,11 +440,27 @@
             </widget>
             <widget class="QWidget">
                 <property name="name">
-                    <cstring>TabPage</cstring>
+                    <cstring>Submaster</cstring>
                 </property>
                 <attribute name="title">
                     <string>Submaster</string>
                 </attribute>
+                <vbox>
+                    <property name="name">
+                        <cstring>unnamed</cstring>
+                    </property>
+                    <widget class="QLabel">
+                        <property name="name">
+                            <cstring>textLabel1_2</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Not implemented yet</string>
+                        </property>
+                        <property name="alignment">
+                            <set>AlignCenter</set>
+                        </property>
+                    </widget>
+                </vbox>
             </widget>
         </widget>
         <widget class="QLayoutWidget">
