@@ -1,4 +1,9 @@
 2007-Sep-24  Heikki Junnila <hjunnila@users.sf.net>
+	* Created implementation for All, None & Invert slots to VCSliderProperties
+	* Set level list sorting by range in VCSliderProperties
+	* Slight improvement to VCSlider::setCaption()
+
+2007-Sep-24  Heikki Junnila <hjunnila@users.sf.net>
 	* Fixed Martin MiniMac Profile's channel groups
 	* Fixed Futurelight DJScan250's channel groups
 	* Added tooltips to spin boxes in VCSliderProperties dialog
